-- Up to you — reference cluster: five open-data name sources
-- Generated by docs/diagrams/er_schema.py from pg_dump. Do not edit.
CREATE TABLE place_publication (
    id bigint NOT NULL,
    source text NOT NULL,
    content_sha256 character(64) NOT NULL,
    archive_stamp timestamp with time zone,
    detected_at timestamp with time zone NOT NULL,
    place_rows integer,
    PRIMARY KEY (id)
);
CREATE TABLE reference_place (
    publication_id bigint NOT NULL,
    registry_no text NOT NULL,
    name text NOT NULL,
    address text NOT NULL,
    business_no text,
    township_code text,
    PRIMARY KEY (publication_id, registry_no),
    FOREIGN KEY (publication_id) REFERENCES place_publication(id),
    FOREIGN KEY (township_code) REFERENCES township_station(township_code)
);
CREATE TABLE brand_publication (
    id bigint NOT NULL,
    source text NOT NULL,
    content_sha256 character(64) NOT NULL,
    detected_at timestamp with time zone NOT NULL,
    pair_rows integer,
    PRIMARY KEY (id)
);
CREATE TABLE brand_registration (
    publication_id bigint NOT NULL,
    company_name text NOT NULL,
    brand_name text NOT NULL,
    PRIMARY KEY (publication_id, company_name, brand_name),
    FOREIGN KEY (publication_id) REFERENCES brand_publication(id)
);
CREATE TABLE storefront_publication (
    id bigint NOT NULL,
    source text NOT NULL,
    content_sha256 character(64) NOT NULL,
    detected_at timestamp with time zone NOT NULL,
    name_rows integer,
    PRIMARY KEY (id)
);
CREATE TABLE storefront_name (
    publication_id bigint NOT NULL,
    registry_no text NOT NULL,
    name text NOT NULL,
    grade text NOT NULL,
    PRIMARY KEY (publication_id, registry_no),
    FOREIGN KEY (publication_id) REFERENCES storefront_publication(id)
);
CREATE TABLE business_status_publication (
    id bigint NOT NULL,
    source text NOT NULL,
    content_sha256 character(64) NOT NULL,
    detected_at timestamp with time zone NOT NULL,
    status_rows integer,
    PRIMARY KEY (id)
);
CREATE TABLE business_status_row (
    publication_id bigint NOT NULL,
    business_no text NOT NULL,
    name_raw text NOT NULL,
    status text NOT NULL,
    PRIMARY KEY (publication_id, business_no, name_raw, status),
    FOREIGN KEY (publication_id) REFERENCES business_status_publication(id)
);
CREATE TABLE business_tax_publication (
    id bigint NOT NULL,
    source text NOT NULL,
    content_sha256 character(64) NOT NULL,
    file_stamp date,
    detected_at timestamp with time zone NOT NULL,
    tax_rows integer,
    PRIMARY KEY (id)
);
CREATE TABLE business_tax_row (
    publication_id bigint NOT NULL,
    business_no text NOT NULL,
    tax_name text NOT NULL,
    address text NOT NULL,
    industry_code text,
    PRIMARY KEY (publication_id, business_no),
    FOREIGN KEY (publication_id) REFERENCES business_tax_publication(id)
);
CREATE TABLE township_station (
    township_code text NOT NULL,
    township_name text NOT NULL,
    station_id text NOT NULL,
    resolution text NOT NULL,
    distance_km numeric(6,2),
    PRIMARY KEY (township_code)
);
